--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>DatingNetwork</display-name>
-  
   <servlet>
     <servlet-name>Authentication</servlet-name>
     <servlet-class>main.java.controllers.ui.Authentication</servlet-class>
@@ -10,13 +9,28 @@
     <servlet-name>Authentication</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>Index</servlet-name>
     <servlet-class>main.java.controllers.ui.Index</servlet-class>
   </servlet>
   <servlet-mapping>
+    <servlet-name>Signup</servlet-name>
+    <url-pattern>/signup</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>Signup</servlet-name>
+    <servlet-class>main.java.controllers.ui.Signup</servlet-class>
+  </servlet>
+  <servlet-mapping>
     <servlet-name>Index</servlet-name>
     <url-pattern>/index</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>Forgot</servlet-name>
+    <servlet-class>main.java.controllers.ui.Forgot</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Forgot</servlet-name>
+    <url-pattern>/forgot</url-pattern>
   </servlet-mapping>
 </web-app>
