--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,36 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>DatingNetwork</display-name>
+  <context-param>
+        <param-name>ProjectURI</param-name>
+        <param-value>/DatingNetwork</param-value>
+    </context-param>
   <servlet>
     <servlet-name>Authentication</servlet-name>
     <servlet-class>main.java.controllers.ui.Authentication</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Authentication</servlet-name>
-    <url-pattern>/login</url-pattern>
+    <url-pattern>/auth</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>Index</servlet-name>
-    <servlet-class>main.java.controllers.ui.Index</servlet-class>
+    <servlet-name>BaseController</servlet-name>
+    <servlet-class>main.java.controllers.ui.BaseController</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Signup</servlet-name>
+    <servlet-name>BaseController</servlet-name>
+    <url-pattern>/user/*</url-pattern>
+    <url-pattern>/hotprofile</url-pattern>
+    <url-pattern>/forgot</url-pattern>
     <url-pattern>/signup</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>Signup</servlet-name>
-    <servlet-class>main.java.controllers.ui.Signup</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Index</servlet-name>
+    <url-pattern>/signin</url-pattern>
     <url-pattern>/index</url-pattern>
   </servlet-mapping>
-  <servlet>
-    <servlet-name>Forgot</servlet-name>
-    <servlet-class>main.java.controllers.ui.Forgot</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Forgot</servlet-name>
-    <url-pattern>/forgot</url-pattern>
-  </servlet-mapping>
+
+    
 </web-app>
