--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <error-page>
-    <location>/404.jsp</location>
+    <location>/view/ui/common/404.jsp</location>
   </error-page>
   <context-param>
     <param-name>ProjectURI</param-name>
@@ -16,19 +16,20 @@
     <url-pattern>/auth</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>BaseController</servlet-name>
-    <servlet-class>main.java.controllers.ui.BaseController</servlet-class>
+    <servlet-name>HomeController</servlet-name>
+    <servlet-class>main.java.controllers.ui.HomeController</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>BaseController</servlet-name>
+    <servlet-name>HomeController</servlet-name>
     <url-pattern>/user/*</url-pattern>
     <url-pattern>/hotprofile</url-pattern>
     <url-pattern>/forgot</url-pattern>
     <url-pattern>/signup</url-pattern>
     <url-pattern>/signout</url-pattern>
     <url-pattern>/signin</url-pattern>
+    <url-pattern></url-pattern>
     <url-pattern>/index</url-pattern>
+    <url-pattern>/category/*</url-pattern>
   </servlet-mapping>
-
 
 </web-app>
